--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "devDependencies": {
         "axios": "^0.19",
         "cross-env": "^5.1",
-        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
+        "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.11"
+        "vue": "^2.5.17",
+        "vue-template-compiler": "^2.6.10"
     },
-    "dependencies": []
+    "dependencies": {
+        "animate.css": "^3.7.2",
+        "vee-validate": "^2.2.15",
+        "vue-js-modal": "^1.3.33",
+        "vue-material": "^1.0.0-beta-11",
+        "vue-router": "^3.1.6"
+    }
 }
