--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vee-validate": "^2.2.15",
         "vue-js-modal": "^1.3.33",
         "vue-material": "^1.0.0-beta-11",
+        "vue-material-design-icons": "^4.4.0",
         "vue-router": "^3.1.6"
     }
 }
