--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "animate.css": "^3.7.2",
+        "jwt-decode": "^2.2.0",
         "vee-validate": "^2.2.15",
         "vue-js-modal": "^1.3.33",
         "vue-material": "^1.0.0-beta-11",
