--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-js-modal": "^1.3.33",
         "vue-material": "^1.0.0-beta-11",
         "vue-material-design-icons": "^4.4.0",
-        "vue-router": "^3.1.6"
+        "vue-router": "^3.1.6",
+        "vuex": "^3.1.3"
     }
 }
